--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,13 +13,11 @@ jobs:
     vmImage: 'Ubuntu-16.04'
   strategy:
     matrix:
-      Python35:
-        python.version: '3.5'
       Python36:
         python.version: '3.6'
       Python37:
         python.version: '3.7'
-    maxParallel: 3
+    maxParallel: 2
 
   steps:
   - task: UsePythonVersion@0
@@ -27,12 +25,31 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: python -m pip install --upgrade pip && pip install -r requirements.txt
+  - task: PythonScript@0
+    displayName: 'Export project path'
+    inputs:
+      scriptSource: 'inline'
+      script: |
+        """Search all subdirectories for `akdsite.py`."""
+        from glob import iglob
+        from os import path
+        # Python >= 3.6
+        manage_py = next(iglob(path.join('**', 'akdsite.py'), recursive=True), None)
+        if not manage_py:
+            raise SystemExit('Could not find a Flask project')
+        project_location = path.dirname(path.abspath(manage_py))
+        print('Found Flask project in', project_location)
+        print('##vso[task.setvariable variable=projectRoot]{}'.format(project_location))
+
+  - script: |
+      python -m pip install --upgrade pip
+      pip install -r requirements.txt
     displayName: 'Install dependencies'
 
   - script: |
       pip install pytest
       pytest tests --doctest-modules --junitxml=junit/test-results.xml
+    condition: succeededOrFailed()
     displayName: 'pytest'
 
   - task: PublishTestResults@2
@@ -49,7 +66,7 @@ jobs:
   steps:
   - task: UsePythonVersion@0
     inputs:
-      versionSpec: '3.x'
+      versionSpec: '3.6'
       architecture: 'x64'
 
   - script: python setup.py sdist
